[package]
name = "token_list"
version = "0.1.0"
authors = ["Edward Bramanti <edward@bramanti.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "4.0.0", features = ["unstable"] }
near-contract-standards = "4.0.0"
near-primitives-core = "0.13.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
